Added Play against Computer

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,4 +2,7 @@
 <resources>
     <style name="AppTheme" parent="@android:style/Theme.Holo.Light">
 	</style>
+  <style name="AppTheme2" parent="@android:style/Theme.DeviceDefault">
+	</style>
+
 </resources>
