--- a/app/src/main/res/layout/xoboard.xml
+++ b/app/src/main/res/layout/xoboard.xml
@@ -99,7 +99,7 @@
 		style="?android:attr/buttonStyleSmall"
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
-		android:text="   Reset   "
+		android:text="   Start   "
 		android:layout_below="@id/XOBoardTableLayout1"
 		android:layout_centerInParent="false"
 		android:layout_marginTop="50dp"
