--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,10 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<group android:id="@+id/menu_group">    
     	<item
-        	android:id="@+id/about"
-       	 android:title="About"/>
+			android:id="@+id/home_menu"
+			android:title="Home"/>
+		<item
+			android:id="@+id/account_menu"
+			android:title="Account"/>
+		<item
+        	android:id="@+id/about_menu"
+       	 	android:title="About"/>
     	<item
-        	android:id="@+id/exit"
-  	      android:title="Exit"/>
+        	android:id="@+id/exit_menu"
+  	      	android:title="Exit"/>
 	</group>
 </menu>
