--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="@android:style/Theme.Holo.Light">
+    <style name="AppTheme" parent="@android:style/Theme.DeviceDefault">
 	</style>
-  <style name="AppTheme2" parent="@android:style/Theme.DeviceDefault">
-	</style>
-
 </resources>
