--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -34,7 +34,7 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/userdetails"
@@ -112,16 +112,16 @@
                 android:layout_marginTop="10dp"
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
-                app:layout_constraintTop_toBottomOf="@id/userdetails"
-                app:layout_constraintBottom_toTopOf="@id/friends_list">
+                app:layout_constraintBottom_toTopOf="@id/friends_list"
+                app:layout_constraintTop_toBottomOf="@id/userdetails">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="15dp"
-                    android:paddingTop="5dp"
                     android:paddingBottom="5dp"
+                    android:paddingEnd="15dp"
+                    android:paddingStart="15dp"
+                    android:paddingTop="5dp"
                     android:text="@string/friends"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
             </android.support.v7.widget.CardView>
@@ -129,12 +129,11 @@
             <ListView
                 android:id="@+id/friends_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="300dp"
                 android:layout_marginBottom="10dp"
-                app:layout_constraintTop_toBottomOf="@id/friends"
                 app:layout_constraintBottom_toBottomOf="parent"
-                tool:listitem="@layout/friends_list_item"
-                android:nestedScrollingEnabled="true"/>
+                app:layout_constraintTop_toBottomOf="@id/friends"
+                tool:listitem="@layout/friends_list_item" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v4.widget.NestedScrollView>
