--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -67,10 +67,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/edit"
-                        android:src="@drawable/ic_edit"
                         app:layout_constraintBottom_toBottomOf="@id/account_name"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/account_name" />
+                        app:layout_constraintTop_toTopOf="@id/account_name"
+                        app:srcCompat="@drawable/ic_edit" />
 
                     <View
                         android:id="@+id/divider1"
@@ -115,15 +115,35 @@
                 app:layout_constraintBottom_toTopOf="@id/friends_list"
                 app:layout_constraintTop_toBottomOf="@id/userdetails">
 
-                <TextView
+                <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="5dp"
-                    android:paddingEnd="15dp"
-                    android:paddingStart="15dp"
-                    android:paddingTop="5dp"
-                    android:text="@string/friends"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="5dp"
+                        android:paddingTop="5dp"
+                        android:text="@string/friends"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+                    <ImageView
+                        android:id="@+id/refresh"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_gravity="end|center_vertical"
+                        android:contentDescription="@string/refresh"
+                        app:srcCompat="@drawable/ic_refresh" />
+
+                    <ProgressBar
+                        android:id="@+id/refresh_progress"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_gravity="end|center_vertical"
+                        android:visibility="invisible" />
+                </FrameLayout>
             </android.support.v7.widget.CardView>
 
             <ListView
