--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,16 +53,16 @@
 
     <com.mukesh.OtpView
         android:id="@+id/otp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/phone_input"
         android:layout_marginTop="30dp"
-        android:gravity="center_horizontal"
-        android:inputType="number"
+        android:layout_centerHorizontal="true"
         android:visibility="invisible"
-        app:length="6"
-        app:space="2dp"
-        app:width="36dp"
+        android:inputType="number"
+        app:itemCount="6"
+        app:itemWidth="32dp"
+        app:viewType="line"
         tool:otp="123456" />
 
     <ProgressBar
